# operating-systems

OS_Lab1/: CMakeLists.txt  creator.cpp  main.cpp  reporter.cpp  test_creator.cpp
OS_Lab2/: OS_Lab2.cpp
